# BSU

./: .gitignore
Algorithm/0.0/: CMakeLists.txt  main.cpp
Algorithm/0.1/: CMakeLists.txt  main.cpp
Algorithm/0.2/: CMakeLists.txt  main.cpp
Algorithm/0.3/: CMakeLists.txt  main.cpp
Algorithm/0.5/: CMakeLists.txt  main.cpp
Algorithm/1_12/: CMakeLists.txt  main.cpp
Algorithm/1_38/: CMakeLists.txt  main.cpp
Algorithm/2_15/: CMakeLists.txt  main.cpp
Algorithm/2_67/: CMakeLists.txt  main.cpp
Algorithm/3_39/: CMakeLists.txt  main.cpp
Computer Architecture/Gauss_Generator/: CMakeLists.txt  main.cpp
Computer Architecture/Lab1/: CMakeLists.txt
Computer Architecture/Lab1_vs/: Lab1_vs.sln
Computer Architecture/Lab2/: main.cpp
Computer Architecture/Lab3/: CMakeLists.txt  main.cpp  test.cpp
Computer Architecture/Lab4/: CMakeLists.txt  main.cpp
Computer Architecture/Lab4_Visualiser/: main.py  result1.csv  result2.csv
Computer Architecture/pythonProject/: main.py
Computere Architecture/Lab2/: CMakeLists.txt
Course Project/nlp_lib/: main.py
Cryptography/Lab1/: .gitignore  CMakeLists.txt  Decrypter.cpp  Decrypter.h  Vigenere.cpp  Vigenere.h  main.cpp
Cryptography/Lab3/: EllipticGroup.cpp  EllipticGroup.h  User.cpp  User.h
Lab7/: input.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
Lab8/: Graph1.txt  Graph2.txt
Numerical Analysis/Lab1/: main.cpp
Numerical Analysis/Lab2/: CMakeLists.txt
Numerical Analysis/Lab3/: CMakeLists.txt
Numerical Analysis/Lab6/: main.cpp
Numerical Analysis/Lab7/: CMakeLists.txt  main.cpp
Operation Systems/Lab1/: Lab1.sln
(+807 files in other folders)
